@@ -6,7 +6,7 @@ plugins {
     id "io.sdkman.vendors"              version "1.1.1"     apply false
     id "com.jfrog.bintray"              version "1.7.3"     apply false
     id "com.github.kt3k.coveralls"      version "2.8.1"     apply false
-    id 'com.github.ben-manes.versions'  version '0.14.0'
+    id 'com.github.ben-manes.versions'  version '0.15.0'
 }
 
 
@@ -28,27 +28,27 @@ repositories {
 }
 
 ext {
-    asciidoctorjVersion = '1.5.5'
-    asciidoctorjDiagramVersion = '1.5.4'
+    asciidoctorjVersion = '1.5.6'
+    asciidoctorjDiagramVersion = '1.5.4.1'
     commonsIoVersion = '2.5'
     commonsConfigurationVersion = '1.10'
-    commonsLangVersion = '3.4'
+    commonsLangVersion = '3.6'
     commonsVfs2Version = '2.1'
     args4jVersion = '2.33'
-    freemarkerVersion = '2.3.25-incubating'
-    junitVersion = '4.12'
+    freemarkerVersion = '2.3.26-incubating'
+    junit4Version = '4.12'
     pegdownVersion = '1.6.0'
-    jettyServerVersion = '8.1.19.v20160209'
-    orientDbVersion = '2.2.15'
-    groovyVersion = '2.4.8'
-    slf4jVersion = '1.7.22'
-    logbackVersion = '1.1.9'
-    assertjCoreVersion = '1.7.1'
-    thymeleafVersion = '3.0.3.RELEASE'
+    jettyServerVersion = '9.2.22.v20170606'
+    orientDbVersion = '2.2.28'
+    groovyVersion = '2.4.12'
+    slf4jVersion = '1.7.25'
+    logbackVersion = '1.2.3'
+    assertjCoreVersion = '2.8.0'
+    thymeleafVersion = '3.0.7.RELEASE'
     jsonSimpleVersion = '1.1.1'
     jade4jVersion = '1.2.5'
-    mockitoVersion = '1.10.19'
-    jsoupVersion = '1.10.2'
+    mockitoVersion = '2.10.0'
+    jsoupVersion = '1.10.3'
 }
 
 sourceSets {
@@ -92,7 +92,7 @@ dependencies {
 
     dist group: 'org.asciidoctor', name: 'asciidoctorj-diagram', version: asciidoctorjDiagramVersion
 
-    testCompile group: 'junit', name: 'junit', version: junitVersion
+    testCompile group: 'junit', name: 'junit', version: junit4Version
     testCompile group: 'org.assertj', name: 'assertj-core', version: assertjCoreVersion
     testCompile group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
 
@@ -101,8 +101,21 @@ dependencies {
     smokeTestRuntime configurations.testRuntime
 }
 
+dependencyUpdates.resolutionStrategy = {
+  componentSelection { rules ->
+    rules.all { ComponentSelection selection ->
+      boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
+        selection.candidate.version ==~ /(?i).*[.-]?${qualifier}[.\d-]*/
+      }
+      if (rejected) {
+        selection.reject('Release candidate')
+      }
+    }
+  }
+}
+
 test {
-    jvmArgs '-XX:MaxDirectMemorySize=512m', '-Dorientdb.installCustomFormatter=false=false'
+    jvmArgs '-Xmx512m', '-XX:MaxPermSize=512m', '-XX:MaxDirectMemorySize=128m', '-Dorientdb.installCustomFormatter=false=false'
 }
 
 task smokeTest(type: Test, dependsOn: installDist) {
